# uvc4openCV

./: CMakeLists.txt  README
inc/: utils.h  v4l2uvc.h
src/: color.cpp  main.cpp  utils.cpp  v4l2uvc.cpp
